ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restaurantapp-ingress
  namespace: webapps
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/upstream-hash-by: "$remote_addr"
spec:
  ingressClassName: nginx
  rules:
  - host: test.foodenginepos.com
    http:
      paths:
      - path: /blog
        pathType: Prefix
        backend:
          service:
            name: restaurantapp-svc 
            port:
              number: 8080
